<resources>
    <string name="app_name">云信笔记</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="note_edit_hint">输入文本内容</string>
    <string name="note_title_edit_hint">输入清单标题</string>
    <string name="detail_edit_hint">按回车键添加更多</string>
    <string name="note_search_hint">输入笔记关键字</string>
    <string name="main_empty_tip">设置同步账号，笔记备份到云端可永不丢失</string>
    <string name="no_data">无数据</string>
    <string name="no_title">无标题</string>
    <string name="prompt">提示</string>
    <string name="colon">：</string>
    <string name="label_folder_list">笔记本列表</string>
    <string name="label_folder_edit">编辑笔记本</string>
    <string name="label_note_share">保存到云信笔记</string>
    <string name="label_trash">回收站</string>
    <string name="label_settings">设置</string>
    <string name="label_about">关于</string>
    <string name="label_settings_account">账户信息</string>
    <string name="label_feedback">建议或意见</string>
    <string name="confirm_to_trash">确定删除该项么？删除后可以在回收站中恢复！</string>
    <string name="confirm_fodler_to_trash">确定删除该项么？该文件夹下面的笔记也将会被删除，删除后可以在回收站中恢复！</string>
    <string name="confirm_clear_content">将会清空输入的内容，确定吗？</string>
    <string name="add_result_error">添加失败</string>
    <string name="update_result_error">保存失败</string>
    <string name="update_result_success">保存成功</string>
    <string name="delete_result_error">删除失败</string>
    <string name="delete_result_success">删除成功</string>
    <string name="move_result_error">移动失败</string>
    <string name="record_error">录音失败，请检查是否有录音的权限</string>
    <string name="paint_save_error_reason">画图保存失败，由于画图需要保存文件到SD卡中，所以请授予SD卡的读写权限</string>
    <string name="paint_save_error">画图保存失败，请检查是否授予应用SD卡读写权限</string>
    <string name="read_empty_contact">联系人数据为空</string>
    <string name="read_contact_failed">选择联系人失败，请允许读取联系人数据</string>
    <string name="share_weibo_repeat">分享失败，内容重复了，请稍后再试</string>
    <string name="share_no_client">没有安装%1S客户端,或客户端不可用</string>
    <string name="pwd_error">密码错误，请稍后再试</string>
    <string name="init">初始化中…</string>
    <string name="copy_success">已复制到剪贴板</string>
    <string name="tip_no_app_handle">没有安装对应的应用程序</string>
    <string name="tip_no_text">没有内容</string>
    <string name="tip_camera_error">打开相机失败</string>
    <string name="tip_mkfile_error">没有创建文件的权限，请允许创建文件</string>
    <string name="tip_record_permission_need">录音需要录音权限，请允许该权限</string>
    <string name="tip_record_permission_failed">录音失败，录音需要录音权限</string>
    <string name="tip_read_contact_permission_need">插入联系人需要读取联系人的权限，请允许该权限</string>
    <string name="tip_read_permission_failed">插入联系人失败，需要读取联系人的权限</string>
    <string name="tip_grant_write_storage_failed">初始化数据写入SD卡失败，没有写入权限</string>
    <string name="tip_share_attach_max_size">一次最多分享%1$d个文件</string>
    <string name="tip_note_clear_all">清空后，将不可恢复，确定清空吗？</string>
    <string name="tip_note_real_delete">删除后，将不可恢复，确定删除吗？</string>
    <string name="tip_note_empty_trash">没有数据，很干净哦~</string>
    <string name="tip_note_empty">还没有笔记哦~</string>
    <string name="tip_share_no_text">没有内容是不能分享的哦~</string>
    <string name="tip_network_not_available">网络不可用，请连接网络后再试</string>
    <string name="tip_file_not_exists">文件不存在</string>
    <string name="tip_file_too_large">文件不能超过%1$dMB</string>
    <string name="tip_file_not_download">文件还没有下载</string>
    <string name="tip_sync_mobile_data">移动数据环境下同步设置项没有开启，是否开启？</string>
    <string name="tip_email_is_empty">邮箱不能为空</string>
    <string name="tip_password_is_empty">密码不能为空</string>
    <string name="tip_email_is_not_right">邮箱格式不正确</string>
    <string name="tip_read_sdcard_permission_need">选择图片需要读取SD卡的权限，请允许该权限</string>
    <string name="tip_read_sdcard_permission_failed">选择图片失败，请检查是否有读取SD卡的权限</string>
    <string name="tip_confirm_pwd_error">两次输入的新密码不相同</string>
    <string name="tip_post_param_error">提交提示，请确认提交的信息是否正常</string>
    <string name="sync_setting_btn_text">立即开启</string>
    <string name="title_note_clear_all">清空回收站</string>
    <string name="result_success">操作成功</string>
    <string name="move_to">移动到</string>
    <string name="note_type_text">文本</string>
    <string name="note_type_list">清单</string>
    <string name="sync_type_none">未同步</string>
    <string name="sync_type_done">已同步</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="note_type">类型</string>
    <string name="path">路径</string>
    <string name="size">大小</string>
    <string name="note_words">字数</string>
    <string name="note_detail_count">清单数量</string>
    <string name="create_time">创建时间</string>
    <string name="modify_time">修改时间</string>
    <string name="sync_state">同步状态</string>
    <string name="default_state">默认状态</string>
    <string name="default_folder">默认文件夹</string>
    <string name="undo">撤销</string>
    <string name="real_delete">彻底删除</string>
    <string name="do_refresh">刷新</string>
    <string name="unit_word_count">%1$d 字</string>
    <string name="unit_detail_count">%1$d 条</string>
    <string name="hint_folder_edit">输入文件夹名称</string>
    <string name="folder_title_lock">加锁</string>
    <string name="folder_summary_lock">给文件夹加锁</string>
    <string name="folder_title_hide">设为默认</string>
    <string name="folder_summary_hide">桌面小工具笔记默认的保存文件夹</string>
    <string name="folder_note_count">笔记数量</string>
    <string name="folder_move_no_more">没有可移动的文件夹</string>
    <string name="default_archive">所有</string>
    <string name="default_archive_widget">所有文件夹</string>
    <string name="sort_style">排序方式</string>
    <string name="sort_modify_time">最近更新</string>
    <string name="sort_create_time">创建时间</string>
    <string name="sort_title">标题</string>
    <string name="action_settings">设置</string>
    <string name="action_folder">笔记本</string>
    <string name="action_trash">回收站</string>
    <string name="action_search">搜索</string>
    <string name="action_find">查找</string>
    <string name="action_more">更多</string>
    <string name="action_show_grid">表格</string>
    <string name="action_show_list">列表</string>
    <string name="action_upload">同步</string>
    <string name="action_sort">排序</string>
    <string name="action_attach">附件</string>
    <string name="action_save">保存</string>
    <string name="action_edit">编辑</string>
    <string name="action_camera">相机</string>
    <string name="action_photo">图片</string>
    <string name="action_voice">录音</string>
    <string name="action_write">手写</string>
    <string name="action_brush">涂鸦</string>
    <string name="action_remind">提醒</string>
    <string name="action_detailed_list">清单</string>
    <string name="action_share">分享</string>
    <string name="action_info">详情</string>
    <string name="action_delete">删除</string>
    <string name="action_move">移动</string>
    <string name="action_restore">还原</string>
    <string name="action_add">新建</string>
    <string name="action_forward">转发</string>
    <string name="action_copy">复制</string>
    <string name="action_call">呼出</string>
    <string name="action_web_open">浏览器打开</string>
    <string name="action_mailto">发送邮件</string>
    <string name="action_contact_add">添加到联系人</string>
    <string name="action_contact_add_new">创建新联系人</string>
    <string name="action_contact_add_edit">保存到现有联系人</string>
    <string name="action_map_open">地图显示</string>
    <string name="action_image_open">查看</string>
    <string name="action_voice_open">播放</string>
    <string name="action_paint">画笔</string>
    <string name="action_eraser">橡皮檫</string>
    <string name="action_undo">撤销</string>
    <string name="action_redo">重做</string>
    <string name="action_open">打开</string>
    <string name="action_clear_all">清空</string>
    <string name="action_sync_ing">同步中…</string>
    <string name="action_take_pic">拍照</string>
    <string name="action_pic_img">从相册中选择</string>
    <string name="stroke_tip_type">画笔类型</string>
    <string name="stroke_tip_size">画笔大小</string>
    <string name="stroke_tip_color">画笔颜色</string>
    <string name="stroke_tip_alpha">不透明度</string>
    <string name="erase_tip_size">橡皮檫大小</string>
    <string name="erase_tip_clear">清除整页</string>
    <string name="app_wechat">微信</string>
    <string name="share_sina_weibo">新浪微博</string>
    <string name="share_wechat">微信好友</string>
    <string name="share_wechat_moments">微信朋友圈</string>
    <string name="share_qq" translatable="false">QQ</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_more">"更多…"</string>
    <string name="share_cancel">取消分享</string>
    <string name="share_ing">"分享处理中…"</string>
    <string name="share_success">分享成功</string>
    <string name="share_failed">分享失败</string>
    <string name="find_hint">"查找…"</string>
    <string name="share_fork_sina_weibo">关注新浪微博</string>
    <string name="settings_category_normal">常规</string>
    <string name="settings_category_other">其他</string>
    <string name="settings_account_title">账号</string>
    <string name="settings_account_summary">设置同步账号</string>
    <string name="settings_sync_summary">同步方式</string>
    <string name="settings_security_title">安全</string>
    <string name="settings_security_summary">输入密码才能查看、搜索、分享笔记</string>
    <string name="settings_more_title">更多设置</string>
    <string name="settings_more_summary">主题、快捷方式等</string>
    <string name="settings_feedback_title">反馈</string>
    <string name="settings_feedback_summary">提交意见或建议</string>
    <string name="settings_about_title">关于</string>
    <string name="settings_about_summary">当前版本、检查更新、推荐等</string>
    <string name="settings_sync_note_title">笔记</string>
    <string name="settings_sync_note_summary">后台自动同步笔记</string>
    <string name="settings_sync_traffic_title">移动数据流量同步</string>
    <string name="settings_sync_traffic_summary">在3G/4G等数据流量环境下也自动同步</string>
    <string name="settings_sync_state_title">同步状态</string>
    <string name="settings_sync_state_summary">没有同步过</string>
    <string name="settings_sync_state_summary_time">上次同步：%1$s</string>
    <string name="settings_security_type_title">安全密码</string>
    <string name="settings_security_type_summary">查看、搜索、分享笔记等需要密码</string>
    <string name="settings_security_pwd_modify">修改密码</string>
    <string name="settings_security_widget_title">桌面中显示笔记</string>
    <string name="settings_security_widget_summary">在桌面的小工具中显示笔记的内容</string>
    <string name="settings_pwd_type_title">选择密码类型</string>
    <string name="settings_pwd_modify_digital_title">请输入原始密码:</string>
    <string name="settings_pwd_modify_pattern_title">请绘制原始图案:</string>
    <string name="settings_pwd_modify_digital_new_title">请输入新密码:</string>
    <string name="settings_pwd_modify_pattern_new_title">请绘制新图案:</string>
    <string name="settings_more_shortcut_title">状态栏快捷方式</string>
    <string name="settings_more_shortcut_summary">在状态栏中能够方便的新建笔记</string>
    <string name="settings_more_theme_title">主题</string>
    <string name="settings_more_theme_summary">选择默认或者夜间主题</string>
    <string name="settings_notification_create_shortcut">快速新建笔记</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_denied">Permission \"%1$s\" has been denied.</string>
    <string name="authority_account_tip">电子邮箱</string>
    <string name="authority_password_tip">请输入密码</string>
    <string name="authority_password_confirm_tip">请输入确认密码</string>
    <string name="authority_login_text">立即登录</string>
    <string name="authority_forget_password_tip">忘记密码？</string>
    <string name="authority_login_qq">QQ登录</string>
    <string name="authority_login_weibo">微博登录</string>
    <string name="authority_menu_register_text">注册</string>
    <string name="account_modify_hint_pwd_old">输入原密码</string>
    <string name="account_modify_hint_pwd_new">输入新密码</string>
    <string name="account_modify_hint_pwd_new_confirm">输入确认新密码</string>
    <string name="account_modify_btn_text">修改</string>
</resources>