<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/label_settings">

    <android.support.v7.preference.PreferenceCategory android:title="@string/settings_category_normal"/>

    <android.support.v7.preference.Preference 
        android:key="@string/settings_key_account_in"
        android:title="@string/settings_account_title"
        android:icon="@drawable/ic_social_person"
        android:summary="@string/settings_account_summary"/>

    <android.support.v7.preference.Preference android:title="@string/action_upload"
        android:icon="@drawable/ic_sync_black"
        android:summary="@string/settings_sync_summary">
        <intent
            android:targetClass="com.yunxinlink.notes.ui.settings.SettingsSyncActivity"
            android:targetPackage="com.yunxinlink.notes"/>
    </android.support.v7.preference.Preference>

    <android.support.v7.preference.Preference android:title="@string/settings_security_title"
        android:icon="@drawable/ic_action_lock"
        android:summary="@string/settings_security_summary">
        <intent
            android:targetClass="com.yunxinlink.notes.ui.settings.SettingsSecurityActivity"
            android:targetPackage="com.yunxinlink.notes"/>
    </android.support.v7.preference.Preference>        

    <android.support.v7.preference.Preference android:title="@string/settings_more_title"
        android:icon="@drawable/ic_more_horiz"
        android:summary="@string/settings_more_summary">
        <intent
            android:targetClass="com.yunxinlink.notes.ui.settings.SettingsMoreActivity"
            android:targetPackage="com.yunxinlink.notes"/>
    </android.support.v7.preference.Preference>

    <android.support.v7.preference.PreferenceCategory android:title="@string/settings_category_other"/>

    <android.support.v7.preference.Preference android:title="@string/settings_feedback_title"
        android:icon="@drawable/ic_feedback_black"
        android:summary="@string/settings_feedback_summary">
        <intent 
            android:targetClass="com.yunxinlink.notes.ui.settings.FeedbackActivity"
            android:targetPackage="com.yunxinlink.notes"/>
    </android.support.v7.preference.Preference>        

    <android.support.v7.preference.Preference android:title="@string/settings_about_title"
        android:icon="@drawable/ic_action_info"
        android:summary="@string/settings_about_summary">
        <intent
            android:targetClass="com.yunxinlink.notes.ui.settings.AboutActivity"
            android:targetPackage="com.yunxinlink.notes"/>
    </android.support.v7.preference.Preference>

</android.support.v7.preference.PreferenceScreen>