<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_remind"
        android:icon="@drawable/ic_action_alarm_on"
        android:title="@string/action_remind"/>
    <item
        android:id="@+id/action_detailed_list"
        android:icon="@drawable/ic_action_detailed_list"
        android:title="@string/action_detailed_list"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_action_share_white"/>
    
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_trash"
        android:title="@string/action_delete"/>
    
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_action_info"
        android:title="@string/action_info"/>
</menu>
