<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_move"
        android:title="@string/action_move"
        android:icon="@drawable/ic_action_forward"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_info"
        android:title="@string/action_info"
        android:icon="@drawable/ic_action_info_outline"
        app:showAsAction="always"/>
</menu>