<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group_edit_type" android:orderInCategory="100" android:visible="false">
        <item
            android:id="@+id/action_attach"
            android:title="@string/action_attach"
            android:icon="@drawable/ic_action_attach"
            app:showAsAction="always"/>

        <item
            android:id="@+id/action_camera"
            android:title="@string/action_camera"
            android:icon="@drawable/ic_action_camera"
            app:showAsAction="always"/>

        <item
            android:id="@+id/action_more"
            android:title="@string/action_more"
            app:showAsAction="always"/>
    </group>
    
    <group android:id="@+id/group_edit" android:orderInCategory="101">
        <item 
            android:id="@+id/action_edit"
            android:title="@string/action_edit"
            android:icon="@drawable/ic_create"
            app:showAsAction="always"/>
    </group>
    
</menu>