<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_restore"
        android:title="@string/action_restore"
        android:icon="@drawable/ic_backup_restore"
        android:orderInCategory="200"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="300"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_info"
        android:title="@string/action_info"
        android:icon="@drawable/ic_action_info_outline"
        android:orderInCategory="400"
        app:showAsAction="always"/>
</menu>