<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yunxinlink.notes.ui.RegisterFragment"
    android:scrollbars="none"
    android:fillViewport="true">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin">
    
        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.yunxinlink.notes.widget.ClearableEditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/authority_account_tip"/>
        </android.support.design.widget.TextInputLayout>
    
        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_layout"
            android:layout_marginTop="@dimen/content_padding">
            <com.yunxinlink.notes.widget.ClearableEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/authority_password_tip"/>
        </android.support.design.widget.TextInputLayout>
    
        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_confirm_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_layout"
            android:layout_marginTop="@dimen/content_padding">
            <com.yunxinlink.notes.widget.ClearableEditText
                android:id="@+id/et_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/authority_password_confirm_tip"/>
        </android.support.design.widget.TextInputLayout>
    
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authority_menu_register_text"
            style="@style/CommonBtnStyle"
            android:layout_below="@id/password_confirm_layout"
            android:layout_marginTop="@dimen/authority_btn_margin_top"
            android:textSize="@dimen/content_text_size_large"
            android:enabled="false"/>
    
    </RelativeLayout>
</ScrollView>