<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yunxinlink.notes.ui.LoginFragment"
    android:padding="@dimen/activity_vertical_margin">
    
    <RelativeLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.yunxinlink.notes.widget.ClearableEditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/authority_account_tip"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_layout"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <com.yunxinlink.notes.widget.ClearableEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/authority_password_tip"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authority_login_text"
            style="@style/CommonBtnStyle"
            android:layout_below="@id/password_layout"
            android:layout_marginTop="@dimen/authority_btn_margin_top"
            android:textSize="@dimen/content_text_size_large"
            android:enabled="false"/>

        <TextView
            android:id="@+id/tv_password_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CommonTextBtnStyle"
            android:text="@string/authority_forget_password_tip"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="@dimen/authority_btn_margin_top"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/qq_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_qq"
                android:tint="@android:color/white"
                android:scaleType="centerInside"
                android:background="@drawable/bg_blue_qq_selector"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/content_padding"
                android:textSize="@dimen/content_text_size_middle"
                android:text="@string/authority_login_qq"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/weibo_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_weibo"
                android:tint="@android:color/white"
                android:scaleType="centerInside"
                android:background="@drawable/bg_red_weibo_selector"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/content_padding"
                android:textSize="@dimen/content_text_size_middle"
                android:text="@string/authority_login_weibo"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
