<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_password_modify"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yunxinlink.notes.ui.PasswordModifyActivity">

    <include
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/top_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/old_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:passwordToggleEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:hint="@string/account_modify_hint_pwd_old"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:hint="@string/account_modify_hint_pwd_new"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirm_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:hint="@string/account_modify_hint_pwd_new_confirm"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_modify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_modify_btn_text"
                style="@style/CommonBtnStyle"
                android:layout_marginTop="@dimen/authority_btn_margin_top"
                android:textSize="@dimen/content_text_size_large"
                android:enabled="false"/>

            <TextView
                android:id="@+id/tv_password_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CommonTextBtnStyle"
                android:text="@string/authority_forget_password_tip"
                android:layout_marginTop="@dimen/authority_btn_margin_top"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
